added some endpoint and fixed the file endpoint
